# materialab

./: CMakeLists.txt  gui.cpp  materialab.cpp  materialab.h  test.shader
